--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="page-content">
-    <app-navbar></app-navbar>
-    <app-home></app-home>
-    <app-about></app-about>
-</div>
+<router-outlet></router-outlet>
