--- a/src/app/pages/main/navbar/navbar.component.css
+++ b/src/app/pages/main/navbar/navbar.component.css
@@ -2,6 +2,10 @@
   position: static;
 }
 
+.navbar{
+  background: linear-gradient(90deg, rgb(255, 255, 255), rgb(3, 59, 244));
+}
+
 .megamenu .dropdown-menu {
   background: none;
   border: none;
