--- a/src/app/pages/main/all/all.component.html
+++ b/src/app/pages/main/all/all.component.html
@@ -4,4 +4,5 @@
     <app-about></app-about>
     <app-gallery></app-gallery>
     <app-videos></app-videos>
+    <app-contactanos></app-contactanos>
 </div>
