--- a/src/app/pages/main/gallery/gallery.component.html
+++ b/src/app/pages/main/gallery/gallery.component.html
@@ -26,23 +26,27 @@
 
                                 <!-- Modal -->
                                 <ng-template #editProfileModal let-modal>
-                                    <div class="modal-header" *ngFor="let gal of galerias">
+
+
+                                    <div class="modal-header">
                                         <h5 class="modal-title" id="editProfileLabel">Listado de puntaje
                                         </h5>
 
-                                        <img src="{{gal.imagen}}">
                                         <button type="button" class="close" (click)="modal.dismiss()"
                                             aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
 
-                                    <div class="modal-body">
+                                    <div class="modal-body" *ngFor="let gal of galerias">
                                         <!-- Aqui se coloca lo adentro -->
 
                                         <div class="card-body text-center">
-                                            <div class="table-responsive">
-                                            </div>
+
+
+                                            <img src="{{gal.imagen}}">
+
+
                                         </div>
 
                                         <!-- Afuera -->
