--- a/src/app/pages/pre-auth/galley-admin/addgallery/addgallery.component.html
+++ b/src/app/pages/pre-auth/galley-admin/addgallery/addgallery.component.html
@@ -61,7 +61,12 @@
                                 </div>
 
                                 <div class="form-floating mb-3 col-5" *ngIf="selectPrincipal == 'fotos'">
-                                    <textarea formControlName="descripcion" cols="30" rows="5"></textarea>
+                                    <input class="form-control" formControlName="nombre" type="text" name="nombre" />
+                                    <label class="text-center">Nombre</label>
+                                </div>
+
+                                <div class="form-floating mb-3 col-5" *ngIf="selectPrincipal == 'fotos'">
+                                    <textarea class="form-control description" formControlName="descripcion"></textarea>
                                     <label class="text-center">Descripcion</label>
                                 </div>
 
@@ -71,21 +76,27 @@
                                 </div>
                             </div>
 
-                            <div class="row position-absolute fixed-bottom mb-2">
-                                <div class="col-md-6 d-grid justify-content-center">
-                                    <button type="submit"
-                                        class="btn btn-primary btn-lg btn-login text-uppercase fw-bold col-12">
-                                        Aceptar
-                                    </button>
+
+                            <div class="col-12">
+                                <div class="row">
+                                    <div class="ajustButton">
+                                        <div class="col-md-6 d-grid justify-content-center">
+                                            <button type="submit"
+                                                class="btn btn-primary btn-lg btn-login text-uppercase fw-bold col-12">
+                                                Aceptar
+                                            </button>
+                                        </div>
+
+                                        <div class="col-md-6 d-grid justify-content-center">
+                                            <button (click)="devolver()"
+                                                class="btn btn-success btn-lg btn-login text-uppercase fw-bold col-12">
+                                                Devolver
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="col-md-6 d-grid justify-content-center">
-                                    <button (click)="devolver()"
-                                        class="btn btn-success btn-lg btn-login text-uppercase fw-bold col-12">
-                                        Devolver
-                                    </button>
 
-                                </div>
                             </div>
                         </form>
                     </div>
