--- a/src/app/pages/main/gallery/gallery.component.html
+++ b/src/app/pages/main/gallery/gallery.component.html
@@ -42,9 +42,288 @@
                                         <!-- Aqui se coloca lo adentro -->
 
                                         <div class="card-body text-center">
+                                            <!-- 
+
+                                            <img src="{{gal.imagen}}"> -->
 
 
-                                            <img src="{{gal.imagen}}">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                            <div class="wp-block-columns has-3-columns">
+                                                <div class="wp-block-column">
+                                                    <div style="border:1px solid #f5f5f5;padding-top:15px;padding-right:15px;padding-bottom:0px;padding-left:15px;border-radius:12px;background-color:rgba(255, 255, 255, 1);box-shadow:1px 1px 16px #efefef"
+                                                        id="wp-blocks-design-id-d0780ad9"
+                                                        class="wp-block-design-dynamic-block">
+                                                        <style>
+                                                            #wp-blocks-design-id-d0780ad9:hover {
+                                                                border: 1px solid #f2f2f2 !important;
+                                                                padding-top: 15px !important;
+                                                                padding-right: 15px !important;
+                                                                padding-bottom: 0px !important;
+                                                                padding-left: 15px !important;
+                                                                border-radius: 12px !important;
+                                                                background-color: rgba(255, 255, 255, 1) !important;
+                                                                box-shadow: 1px 1px 16px #f6e4e2 !important;
+                                                            }
+                                                        </style>
+                                                        <div class="wp-block-columns has-2-columns">
+                                                            <div class="wp-block-column">
+                                                                <div style="height:20px" aria-hidden="true"
+                                                                    class="wp-block-spacer"></div>
+
+
+
+                                                                <p class="has-text-align-right has-very-dark-gray-color has-text-color has-custom-font"
+                                                                    style="font-size:23px;font-family:Fira Sans">BEAST
+                                                                    PRO</p>
+
+
+
+                                                                <p class="has-text-align-right has-vivid-red-color has-text-color has-custom-font"
+                                                                    style="font-size:23px;font-family:Fira Sans">$198.99
+                                                                </p>
+
+
+
+                                                                <div class="wp-block-button alignright is-style-btn-rounded has-custom-size has-custom-font has-custom-weight"
+                                                                    style="font-family:Fira Sans;font-weight:400;font-size:15px">
+                                                                    <a class="wp-block-button__link has-vivid-white-color has-pale-pink-background-color has-text-color has-background"
+                                                                        href="#">See Offer</a></div>
+                                                            </div>
+
+
+
+                                                            <div class="wp-block-column">
+                                                                <div style="height:40px" aria-hidden="true"
+                                                                    class="wp-block-spacer"></div>
+
+
+
+                                                                <figure class="wp-block-image"><img
+                                                                        src="http://demo.aa-team.com/tf/kingdomWooZone/kingdomberg/wp-content/uploads/2019/07/Rose-Gold-Headphone-PNG-Image-Background.png"
+                                                                        alt=""></figure>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+
+
+                                                <div class="wp-block-column">
+                                                    <div style="border:1px solid #f5f5f5;padding-top:15px;padding-right:15px;padding-bottom:0px;padding-left:15px;border-radius:12px;background-color:rgba(255, 255, 255, 1);box-shadow:1px 1px 16px #efefef"
+                                                        id="wp-blocks-design-id-4d1c76c8"
+                                                        class="wp-block-design-dynamic-block">
+                                                        <style>
+                                                            #wp-blocks-design-id-4d1c76c8:hover {
+                                                                border: 1px solid #f2f2f2 !important;
+                                                                padding-top: 15px !important;
+                                                                padding-right: 15px !important;
+                                                                padding-bottom: 0px !important;
+                                                                padding-left: 15px !important;
+                                                                border-radius: 12px !important;
+                                                                background-color: rgba(255, 255, 255, 1) !important;
+                                                                box-shadow: 1px 1px 16px #f6e4e2 !important;
+                                                            }
+                                                        </style>
+                                                        <div class="wp-block-columns has-2-columns">
+                                                            <div class="wp-block-column">
+                                                                <div style="height:20px" aria-hidden="true"
+                                                                    class="wp-block-spacer"></div>
+
+
+
+                                                                <p class="has-text-align-right has-very-dark-gray-color has-text-color has-custom-font"
+                                                                    style="font-size:23px;font-family:Fira Sans">BEAST
+                                                                    PRO</p>
+
+
+
+                                                                <p class="has-text-align-right has-vivid-red-color has-text-color has-custom-font"
+                                                                    style="font-size:23px;font-family:Fira Sans">$198.99
+                                                                </p>
+
+
+
+                                                                <div class="wp-block-button alignright is-style-btn-rounded-outline has-custom-size has-custom-font has-custom-weight"
+                                                                    style="font-family:Fira Sans;font-weight:400;font-size:15px">
+                                                                    <a class="wp-block-button__link has-vivid-red-color has-vivid-white-background-color has-text-color has-background"
+                                                                        href="#">Shop Now</a></div>
+                                                            </div>
+
+
+
+                                                            <div class="wp-block-column">
+                                                                <div style="height:40px" aria-hidden="true"
+                                                                    class="wp-block-spacer"></div>
+
+
+
+                                                                <figure class="wp-block-image"><img
+                                                                        src="http://demo.aa-team.com/tf/kingdomWooZone/kingdomberg/wp-content/uploads/2019/07/kisspng-iphone-5s-apple-watch-series-3-apple-pay-apple-watch-5a70cf1e5187e8.584021141517342494334.png"
+                                                                        alt=""></figure>
+                                                            </div>
+                                                        </div>
+
+
+
+                                                        <p></p>
+                                                    </div>
+                                                </div>
+
+
+
+                                                <div class="wp-block-column">
+                                                    <div style="border:1px solid #f5f5f5;padding-top:15px;padding-right:15px;padding-bottom:0px;padding-left:15px;border-radius:12px;background-color:rgba(255, 255, 255, 1);box-shadow:1px 1px 16px #efefef"
+                                                        id="wp-blocks-design-id-41780c10"
+                                                        class="wp-block-design-dynamic-block">
+                                                        <style>
+                                                            #wp-blocks-design-id-41780c10:hover {
+                                                                border: 1px solid #f2f2f2 !important;
+                                                                padding-top: 15px !important;
+                                                                padding-right: 15px !important;
+                                                                padding-bottom: 0px !important;
+                                                                padding-left: 15px !important;
+                                                                border-radius: 12px !important;
+                                                                background-color: rgba(255, 255, 255, 1) !important;
+                                                                box-shadow: 1px 1px 16px #f6e4e2 !important;
+                                                            }
+                                                        </style>
+                                                        <div class="wp-block-columns has-2-columns">
+                                                            <div class="wp-block-column">
+                                                                <div style="height:20px" aria-hidden="true"
+                                                                    class="wp-block-spacer"></div>
+
+
+
+                                                                <p class="has-text-align-right has-very-dark-gray-color has-text-color has-custom-font"
+                                                                    style="font-size:23px;font-family:Fira Sans">BEAST
+                                                                    PRO</p>
+
+
+
+                                                                <p class="has-text-align-right has-vivid-red-color has-text-color has-custom-font"
+                                                                    style="font-size:23px;font-family:Fira Sans">$198.99
+                                                                </p>
+
+
+
+                                                                <div class="wp-block-button alignright is-style-btn-rounded has-custom-size has-custom-font has-custom-weight"
+                                                                    style="font-family:Fira Sans;font-weight:400;font-size:15px">
+                                                                    <a class="wp-block-button__link has-vivid-white-color has-pale-pink-background-color has-text-color has-background"
+                                                                        href="#">Shop Now</a></div>
+                                                            </div>
+
+
+
+                                                            <div class="wp-block-column">
+                                                                <div style="height:40px" aria-hidden="true"
+                                                                    class="wp-block-spacer"></div>
+
+
+
+                                                                <figure class="wp-block-image"><img
+                                                                        src="http://demo.aa-team.com/tf/kingdomWooZone/kingdomberg/wp-content/uploads/2019/07/kisspng-apple-watch-series-3-apple-watch-series-2-apple-wa-5adfc3ace8df56.9007881015246140609539.png"
+                                                                        alt=""></figure>
+                                                            </div>
+                                                        </div>
+
+
+
+                                                        <p></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
                                         </div>
